# spacelib

./: .gitignore  LICENSE  README.md  setup.cfg
src/missionlib/: commons.py
src/missionlib/suborbital/: newton_1.py  newton_2.py  newton_3.py  newton_4.py  newton_x.py
src/spacelib/: time.py  timing.py  types.py
src/spacelib/models/: spacecraft.py
src/spacelib/telemetry/: colorlog.py  flightlog.py  sensors.py
tests/: test_telemtry_sensors.py
