[metadata]
name = spacelib
version = 0.0.1
author = Rhahi
author_email = git@rhahi.com
description = Automate spacecraft in Kerbal Space Program using kRPC and Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ksp.rhahi.space
project_urls =
    Bug Tracker = https://github.com/rhahi/spacelib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src